--- a/index.html
+++ b/index.html
@@ -1,3 +1,32 @@
-<html>
-  This is Dn. Rf.<br>My Full Name Can't Be revealed as I am a fictional celebrity who edited the gs (my own thing). <br> Moving on... This is my site and... Well, that's it
+  <!DOCTYPE html>
+<html lang="en">
+  <head>
+  <meta charset="UTF-8">
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+</head>
+    <body>
+  This is Dn. Rf.<br>My Full Name Can't Be revealed as I am a fictional celebrity who edited the gs (my own thing). <br> Moving on... This is my site and... Well, that's it!
+  <br><br>
+  I also post SelfieSamarooka's Googology inventions
+  <br><br>
+  SelfieSamarooka's Sundry Set
+  <br><br>
+<body>
+  <p>
+    
+
+\[
+    \text{PANSTARRXITRI} - X_2\ \text{^^}\ X_2\ \text{^^}\ X_2\ \text{@ 100}
+ - s\left(100,\;100\bigl\{1\bigl\{1\bigl\{1\bigl\{1\bigl\{1,\;2''\bigr\}2''\bigr\}1,\;2''\bigr\}2''\bigr\}2\bigr\}2\right) - f_{{\psi}\left( \Omega_{T+1}^{\psi_{\Omega_{T+1}}\left( \Omega_{T+1}^{T} \right) \omega} \right)}(100)
+
+\]
+
+
+  </p>
+</body>
+</html>
+
 </html>
