--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     
 
 \[
-    \text{PANSTARRXITRI} - X_2\ \text{^^}\ X_2\ \text{^^}\ X_2\ \text{@ 100}
- - s\left(100,\;100\bigl\{1\bigl\{1\bigl\{1\bigl\{1\bigl\{1,\;2`''\bigr\}2''\bigr\}1,\;2`''\bigr\}2''\bigr\}2\bigr\}2\right) - f_{{\psi}\left( \Omega_{T+1}^{\psi_{\Omega_{T+1}}\left( \Omega_{T+1}^{T} \right) \omega} \right)}(100)
+    \text{Panstarrxitri} - X_2\ \text{^^}\ X_2\ \text{^^}\ X_2\ \text{@ 100}
+ - s\left(100,100\bigl\{1\bigl\{1\bigl\{1\bigl\{1\bigl\{1,2`''\bigr\}2''\bigr\}1,2`''\bigr\}2''\bigr\}2\bigr\}2\right) - f_{{\psi}\left( \Omega_{T+1}^{\psi_{\Omega_{T+1}}\left( \Omega_{T+1}^{T} \right) \omega} \right)}(100)
 
 \]
 
