--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
   <br><br>
 <body>
   <p>
-    
-
 \[
     \text{Panstarrxitri} - X_2\ \text{^^}\ X_2\ \text{^^}\ X_2\ \text{@ 100}
- - s\left(100,100\bigl\{1\bigl\{1\bigl\{1\bigl\{1\bigl\{1,2`''\bigr\}2''\bigr\}1,2`''\bigr\}2''\bigr\}2\bigr\}2\right) - f_{{\psi}\left( \Omega_{T+1}^{\psi_{\Omega_{T+1}}\left( \Omega_{T+1}^{T} \right) \omega} \right)}(100)
+ - s(100,100{1{1{1{1{1,,2’''}2''}1,2’''}2''}2}2) - f_{{\psi}\left( \Omega_{T+1}^{\psi_{\Omega_{T+1}}\left( \Omega_{T+1}^{T} \right) \omega} \right)}(100)
 
 \]
+  </p>
+    <p>
+\[
+    \text{Panstarthulhum} - X_2\ \text{^^^}\ X \text{@ 100}
+ - s(100,100{1{1{1`,,2’''}2''}2}2) - f_{{\psi}\left( \Omega_{T+1}^{\Omega_{T+1}} \right)}(100)
 
-
+\]
   </p>
 </body>
 </html>
