--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <p>
 \[
     \text{Panstarrxitri} - X_2\ \text{^^}\ X_2\ \text{^^}\ X_2\ \text{@ 100}
- - s(100,100{1{1{1{1{1,,2’''}2''}1,2’''}2''}2}2) - f_{{\psi}\left( \Omega_{T+1}^{\psi_{\Omega_{T+1}}\left( \Omega_{T+1}^{T} \right) \omega} \right)}(100)
+ - s(100,100\{\1{1{1{1{1,,2’''}2''}1,2’''}2''}2}2) - f_{{\psi}\left( \Omega_{T+1}^{\psi_{\Omega_{T+1}}\left( \Omega_{T+1}^{T} \right) \omega} \right)}(100)
 
 \]
   </p>
