--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
   <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Dn. Rf.</title>
   <meta charset="UTF-8">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
@@ -25,7 +26,8 @@
     <p>
 \[
     \text{Panstarthulhum} - X_2\ \text{^^^}\ X \text{@ 100}
- - s\left(100,100\bigl\{1\bigl\{1\bigl\{1`''\bigr\2''}2''\bigr\}2\bigr\}2\right) - f_{{\psi}\left( \Omega_{T+1}^{\Omega_{T+1}} \right)}(100)
+ - s\left(100,\ 100\left\{1\left\{1\left\{1`''\right\}2''\right\}2\right\}2\right)
+- f_{{\psi}\left( \Omega_{T+1}^{\Omega_{T+1}} \right)}(100)
 
 \]
   </p>
