--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p>
 \[
     \text{Panstarthulhum} - X_2\ \text{^^^}\ X \text{@ 100}
- - s\left(100,\100\left\{1\left\{1\left\{1`,,2`''\right\}2''\right\}2\right\}2\right)
+ - s\left(100,100\left\{1\left\{1\left\{1`,,2`''\right\}2''\right\}2\right\}2\right)
 - f_{{\psi}\left( \Omega_{T+1}^{\Omega_{T+1}} \right)}(100)
 
 \]
